Добавили вторую секцию

--- a/index.html
+++ b/index.html
@@ -25,22 +25,70 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="#000">
 	<link rel="stylesheet" href="css/main.min.css">
 
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <script src="https://kit.fontawesome.com/8fd2a7d500.js"></script>
+
 </head>
 <body>
 	<div class="container">
    <div class="profile">
     <div class="profile-photo"></div>
-     <div class="profile-info">
-       <h2 class="heading heading-light">
-         Profile
-       </h2>
-       <p class="profile-text">
-         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae voluptate aliquid blanditiis quibusdam vero deserunt eum? Consequuntur perspiciatis velit, reiciendis voluptatibus ab nihil voluptas aliquid quae cupiditate totam aut, laudantium a nostrum quibusdam delectus. Consequatur dignissimos tenetur alias neque aliquam autem illo quaerat voluptates nostrum, hic cumque expedita magnam rem!
-       </p>
+    <div class="profile-info">
+     <h2 class="heading heading-light">
+       Profile
+     </h2>
+     <p class="profile-text">
+       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae voluptate aliquid blanditiis quibusdam vero deserunt eum? Consequuntur perspiciatis velit, reiciendis voluptatibus ab nihil voluptas aliquid quae cupiditate totam aut, laudantium a nostrum quibusdam delectus. Consequatur dignissimos tenetur alias neque aliquam autem illo quaerat voluptates nostrum, hic cumque expedita magnam rem!
+     </p>
+     <div class="contacts">
+
+       <div class="contacts-item">
+        <h3 class="contacts-title">
+         <i class="fas fa-phone-volume"></i>
+         Phone
+       </h3>
+       <a href="tel: +7 (988) 259-57-70" class="contacts-text">
+         +7 (988) 259-57-70
+       </a>
      </div>
-   
+
+
+     <div class="contacts-item">
+      <h3 class="contacts-title">
+       <i class="fas fa-envelope"></i>
+       Email
+     </h3>
+     <a href="mailto:kurdayvadim@gmail.com" class="contacts-text">
+      kurdayvadim@gmail.com
+    </a>
+  </div>
+
+  <div class="contacts-item">
+    <h3 class="contacts-title">
+     <i class="fas fa-globe-americas"></i>
+     Web
+   </h3>
+   <a href="http://www.mySite.ru" class="contacts-text">
+     http://www.mySite.ru
+   </a>
  </div>
- <div class="resume"></div> 
+
+
+ <div class="contacts-item">
+  <h3 class="contacts-title">
+   <i class="fas fa-map-marker-alt"></i>
+   Home
+ </h3>
+ <address class="contacts-text">
+   344037, Ростов-на-Дону, <br> улица 20 линия 5 
+ </address>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="resume"></div> 
 </div>
 </body>
 </html>
