Закончили левый столбец

--- a/index.html
+++ b/index.html
@@ -83,8 +83,29 @@
    344037, Ростов-на-Дону, <br> улица 20 линия 5 
  </address>
 </div>
+</div> 
+<h2 class="heading heading-light">Languages</h2>
+<div class="languages">
+  <div class="language">
+    <span class="language-text">English</span>
+    <strong class="languages-per">100%</strong>
+  </div>
+  <div class="language">
+    <span class="language-text">French</span>
+    <strong class="languages-per">90%</strong>
+  </div>
+  <div class="language">
+    <span class="language-text">Greak</span>
+    <strong class="languages-per">80%</strong>
+  </div>
 
+  <div class="lines">
+    <span class="line"></span>
+    <span class="line"></span>
+    <span class="line"></span>      
+  </div>
 </div>
+<!-- /.heading heading-light -->
 </div>
 
 </div>
