Верстка правой колонки

--- a/index.html
+++ b/index.html
@@ -109,7 +109,42 @@
 </div>
 
 </div>
-<div class="resume"></div> 
+
+<!-- Правая часть -->
+<div class="resume">
+  <div class="resume-wrap">
+    <div class="logo">
+      <div class="logo-lines logo-lines_left">
+        <span class="logo-line"></span>
+        <span class="logo-line"></span>
+        <span class="logo-line"></span>
+      </div>
+      <div class="logo-img">
+        R/S
+      </div>
+      <div class="logo-lines logo-lines_right">
+        <span class="logo-line"></span>
+        <span class="logo-line"></span>
+        <span class="logo-line"></span>
+      </div>
+    </div>
+    <div class="about">
+      <h1 class="name">Kurday Vadim</h1>
+      <span class="position">Web Developer</span>
+      <address class="about-address">20 line street, 344017, Rostov-na-Donu</address>
+      <div class="about-contacts">
+        <a class="about-contacts__link" href="#">
+          <b>t</b>:8 918 512 80 17</a> |
+        <a class="about-contacts__link" href="#">
+          <b>e</b>: kurdayvadim@gmail.com</a> |
+        <a class="about-contacts__link" href="#">
+          <b>w</b>: www.robertsmith.com</a> |
+      </div>
+    </div>
+  </div>
+  <!-- /.resume-wrap -->
+</div>
+<!-- /.resume -->
 </div>
 </body>
 </html>
