--- a/index.html
+++ b/index.html
@@ -134,15 +134,81 @@
       <address class="about-address">20 line street, 344017, Rostov-na-Donu</address>
       <div class="about-contacts">
         <a class="about-contacts__link" href="#">
-          <b>t</b>:8 918 512 80 17</a> |
-        <a class="about-contacts__link" href="#">
-          <b>e</b>: kurdayvadim@gmail.com</a> |
-        <a class="about-contacts__link" href="#">
-          <b>w</b>: www.robertsmith.com</a> |
-      </div>
+          <b>t</b>: 8 918 512 80 17</a> |
+          <a class="about-contacts__link" href="#">
+            <b>e</b>: kurdayvadim@gmail.com</a> |
+            <a class="about-contacts__link" href="#">
+              <b>w</b>: www.robertsmith.com</a> |
+            </div>
+          </div>
+          <div class="experience">
+            <h2 class="heading heading_dark">
+              Experience
+            </h2>
+            <ul class="list">
+              <li class="list-item">
+                <h4 class="list-item__title">
+                 Hexogan Web Development Company
+               </h4>
+               <span class="list-item__date">Jan 2016 - Oct 2016</span>
+               <p class="list-item__text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum pariatur maiores, cupiditate labore esse sint et nulla aspernatur odit, maxime.
+              </p>
+            </li>
+            <li class="list-item">
+              <h4 class="list-item__title">
+               Hexogan Web Development Company
+             </h4>
+             <span class="list-item__date">Jan 2016 - Oct 2016</span>
+             <p class="list-item__text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum pariatur maiores, cupiditate labore esse sint et nulla aspernatur odit, maxime.
+            </p>
+          </li>
+          <li class="list-item">
+            <h4 class="list-item__title">
+             Hexogan Web Development Company
+           </h4>
+           <span class="list-item__date">Jan 2016 - Oct 2016</span>
+           <p class="list-item__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum pariatur maiores, cupiditate labore esse sint et nulla aspernatur odit, maxime.
+          </p>
+        </li>
+      </ul>
     </div>
+    <div class="education">
+      <h2 class="heading heading_dark">
+        Education
+      </h2>
+      <ul class="list">
+        <li class="list-item list-item_none-border">
+          <h4 class="list-item__title">
+           Hexogan Web Development Company
+         </h4>
+         <span class="list-item__date">Jan 2016 - Oct 2016</span>
+         <p class="list-item__text">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum pariatur maiores, cupiditate labore esse sint et nulla aspernatur odit, maxime.
+        </p>
+      </li>
+    </ul>
   </div>
-  <!-- /.resume-wrap -->
+  <div class="skills">
+     <h2 class="heading heading_dark heading_skills">
+      Skills
+    </h2>
+    <ul class="skills-list">
+      <li class="skills-list__item">Wordpress
+        <div class="level level-30"></div>
+      </li>
+      <li class="skills-list__item">HTML
+        <div class="level level-50"></div>
+      </li>
+      <li class="skills-list__item">PhotoShop
+        <div class="level level-90"></div>
+      </li>
+    </ul>
+  </div>
+</div>
+<!-- /.resume-wrap -->
 </div>
 <!-- /.resume -->
 </div>
